jclass/snapshots/runtime-exception-runtime_exception-ThrowRuntimeException.class.snap
---
source: jclass/src/lib.rs
expression: display
---
public class exception.runtime_exception.ThrowRuntimeException 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #11                      //exception/runtime_exception/ThrowRuntimeException
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 0, methods: 4, attributes: 1
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Class              #8               // java/lang/NullPointerException
   #8 = Utf8               java/lang/NullPointerException
   #9 = Methodref          #7.#3            // java/lang/NullPointerException."<init>":()V
  #10 = Methodref          #11.#12          // exception/runtime_exception/ThrowRuntimeException.secondCall:()V
  #11 = Class              #13              // exception/runtime_exception/ThrowRuntimeException
  #12 = NameAndType        #14:#6           // secondCall:()V
  #13 = Utf8               exception/runtime_exception/ThrowRuntimeException
  #14 = Utf8               secondCall
  #15 = Methodref          #11.#16          // exception/runtime_exception/ThrowRuntimeException.firstCall:()V
  #16 = NameAndType        #17:#6           // firstCall:()V
  #17 = Utf8               firstCall
  #18 = Utf8               Code
  #19 = Utf8               LineNumberTable
  #20 = Utf8               LocalVariableTable
  #21 = Utf8               this
  #22 = Utf8               Lexception/runtime_exception/ThrowRuntimeException;
  #23 = Utf8               main
  #24 = Utf8               ([Ljava/lang/String;)V
  #25 = Utf8               args
  #26 = Utf8               [Ljava/lang/String;
  #27 = Utf8               SourceFile
  #28 = Utf8               ThrowRuntimeException.java
{
  public exception.runtime_exception.ThrowRuntimeException();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 3: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Lexception/runtime_exception/ThrowRuntimeException;
  
  static void secondCall();
    descriptor: ()V
    flags: (0x0008) ACC_STATIC
    Code: 
      stack=2, locals=0, args_size=0
         0: new           #7                  // class java/lang/NullPointerException
         3: dup                     
         4: invokespecial #9                  // Method java/lang/NullPointerException."<init>":()V
         7: athrow                  
      LineNumberTable:
        line 5: 0
  
  static void firstCall();
    descriptor: ()V
    flags: (0x0008) ACC_STATIC
    Code: 
      stack=0, locals=0, args_size=0
         0: invokestatic  #10                 // Method secondCall:()V
         3: return                  
      LineNumberTable:
        line 9: 0
        line 10: 3
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=0, locals=1, args_size=1
         0: invokestatic  #15                 // Method firstCall:()V
         3: return                  
      LineNumberTable:
        line 13: 0
        line 14: 3
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        4     0  args   [Ljava/lang/String;
}
SourceFile: "ThrowRuntimeException.java"
