jclass/snapshots/runtime-inheritance-constructor_chain-ConstructorChainMain$Child.class.snap
---
source: jclass/src/lib.rs
expression: display
---
class inheritance.constructor_chain.ConstructorChainMain$Child extends inheritance.constructor_chain.ConstructorChainMain$Parent
  minor version: 0
  major version: 68
  flags: (0x0020) ACC_SUPER
  this_class: #7                       //inheritance/constructor_chain/ConstructorChainMain$Child
  super_class: #2                      //inheritance/constructor_chain/ConstructorChainMain$Parent
  interfaces: 0, fields: 0, methods: 1, attributes: 3
Constant pool:
   #1 = Methodref          #2.#3            // inheritance/constructor_chain/ConstructorChainMain$Parent."<init>":(I)V
   #2 = Class              #4               // inheritance/constructor_chain/ConstructorChainMain$Parent
   #3 = NameAndType        #5:#6            // "<init>":(I)V
   #4 = Utf8               inheritance/constructor_chain/ConstructorChainMain$Parent
   #5 = Utf8               <init>
   #6 = Utf8               (I)V
   #7 = Class              #8               // inheritance/constructor_chain/ConstructorChainMain$Child
   #8 = Utf8               inheritance/constructor_chain/ConstructorChainMain$Child
   #9 = Utf8               Code
  #10 = Utf8               LineNumberTable
  #11 = Utf8               LocalVariableTable
  #12 = Utf8               this
  #13 = Utf8               Linheritance/constructor_chain/ConstructorChainMain$Child;
  #14 = Utf8               id
  #15 = Utf8               I
  #16 = Utf8               SourceFile
  #17 = Utf8               ConstructorChainMain.java
  #18 = Utf8               NestHost
  #19 = Class              #20              // inheritance/constructor_chain/ConstructorChainMain
  #20 = Utf8               inheritance/constructor_chain/ConstructorChainMain
  #21 = Utf8               InnerClasses
  #22 = Utf8               Parent
  #23 = Utf8               Child
{
  inheritance.constructor_chain.ConstructorChainMain$Child(int);
    descriptor: (I)V
    flags: (0x0000) 
    Code: 
      stack=2, locals=2, args_size=2
         0: aload_0                 
         1: iload_1                 
         2: invokespecial #1                  // Method inheritance/constructor_chain/ConstructorChainMain$Parent."<init>":(I)V
         5: return                  
      LineNumberTable:
        line 10: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        6     0  this   Linheritance/constructor_chain/ConstructorChainMain$Child;
           0        6     1  id     I
}
SourceFile: "ConstructorChainMain.java"
NestHost: class inheritance/constructor_chain/ConstructorChainMain
InnerClasses:
  static #22= #2 of #19;                      // Parent=class inheritance/constructor_chain/ConstructorChainMain$Parent of class inheritance/constructor_chain/ConstructorChainMain
  static #23= #7 of #19;                      // Child=class inheritance/constructor_chain/ConstructorChainMain$Child of class inheritance/constructor_chain/ConstructorChainMain
