jclass/snapshots/runtime-inheritance-constructor_chain-ConstructorChainMain$Parent.class.snap
---
source: jclass/src/lib.rs
expression: display
---
class inheritance.constructor_chain.ConstructorChainMain$Parent 
  minor version: 0
  major version: 68
  flags: (0x0020) ACC_SUPER
  this_class: #8                       //inheritance/constructor_chain/ConstructorChainMain$Parent
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 1, methods: 1, attributes: 3
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Fieldref           #8.#9            // inheritance/constructor_chain/ConstructorChainMain$Parent.id:I
   #8 = Class              #10              // inheritance/constructor_chain/ConstructorChainMain$Parent
   #9 = NameAndType        #11:#12          // id:I
  #10 = Utf8               inheritance/constructor_chain/ConstructorChainMain$Parent
  #11 = Utf8               id
  #12 = Utf8               I
  #13 = Utf8               (I)V
  #14 = Utf8               Code
  #15 = Utf8               LineNumberTable
  #16 = Utf8               LocalVariableTable
  #17 = Utf8               this
  #18 = Utf8               Linheritance/constructor_chain/ConstructorChainMain$Parent;
  #19 = Utf8               SourceFile
  #20 = Utf8               ConstructorChainMain.java
  #21 = Utf8               NestHost
  #22 = Class              #23              // inheritance/constructor_chain/ConstructorChainMain
  #23 = Utf8               inheritance/constructor_chain/ConstructorChainMain
  #24 = Utf8               InnerClasses
  #25 = Utf8               Parent
{
  final int id;
    descriptor: I
    flags: (0x0010) ACC_FINAL
  
  inheritance.constructor_chain.ConstructorChainMain$Parent(int);
    descriptor: (I)V
    flags: (0x0000) 
    Code: 
      stack=2, locals=2, args_size=2
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: aload_0                 
         5: iload_1                 
         6: putfield      #7                  // Field id:I
         9: return                  
      LineNumberTable:
        line 6: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       10     0  this   Linheritance/constructor_chain/ConstructorChainMain$Parent;
           0       10     1  id     I
}
SourceFile: "ConstructorChainMain.java"
NestHost: class inheritance/constructor_chain/ConstructorChainMain
InnerClasses:
  static #25= #8 of #22;                      // Parent=class inheritance/constructor_chain/ConstructorChainMain$Parent of class inheritance/constructor_chain/ConstructorChainMain
