jclass/snapshots/runtime-inheritance-invoke_parent_method-InvokeParentMethodMain.class.snap
---
source: jclass/src/lib.rs
expression: display
---
public class inheritance.invoke_parent_method.InvokeParentMethodMain 
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #14                      //inheritance/invoke_parent_method/InvokeParentMethodMain
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 0, methods: 2, attributes: 3
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Class              #8               // inheritance/invoke_parent_method/InvokeParentMethodMain$Child
   #8 = Utf8               inheritance/invoke_parent_method/InvokeParentMethodMain$Child
   #9 = Methodref          #7.#3            // inheritance/invoke_parent_method/InvokeParentMethodMain$Child."<init>":()V
  #10 = Methodref          #7.#11           // inheritance/invoke_parent_method/InvokeParentMethodMain$Child.getParentId:()I
  #11 = NameAndType        #12:#13          // getParentId:()I
  #12 = Utf8               getParentId
  #13 = Utf8               ()I
  #14 = Class              #15              // inheritance/invoke_parent_method/InvokeParentMethodMain
  #15 = Utf8               inheritance/invoke_parent_method/InvokeParentMethodMain
  #16 = Utf8               Code
  #17 = Utf8               LineNumberTable
  #18 = Utf8               LocalVariableTable
  #19 = Utf8               this
  #20 = Utf8               Linheritance/invoke_parent_method/InvokeParentMethodMain;
  #21 = Utf8               main
  #22 = Utf8               ([Ljava/lang/String;)V
  #23 = Utf8               args
  #24 = Utf8               [Ljava/lang/String;
  #25 = Utf8               child
  #26 = Utf8               Linheritance/invoke_parent_method/InvokeParentMethodMain$Child;
  #27 = Utf8               parentId
  #28 = Utf8               I
  #29 = Utf8               SourceFile
  #30 = Utf8               InvokeParentMethodMain.java
  #31 = Utf8               NestMembers
  #32 = Class              #33              // inheritance/invoke_parent_method/InvokeParentMethodMain$Parent
  #33 = Utf8               inheritance/invoke_parent_method/InvokeParentMethodMain$Parent
  #34 = Utf8               InnerClasses
  #35 = Utf8               Child
  #36 = Utf8               Parent
{
  public inheritance.invoke_parent_method.InvokeParentMethodMain();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 3: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Linheritance/invoke_parent_method/InvokeParentMethodMain;
  
  public static void main(java.lang.String[]);
    descriptor: ([Ljava/lang/String;)V
    flags: (0x0009) ACC_PUBLIC, ACC_STATIC
    Code: 
      stack=2, locals=3, args_size=1
         0: new           #7                  // class inheritance/invoke_parent_method/InvokeParentMethodMain$Child
         3: dup                     
         4: invokespecial #9                  // Method inheritance/invoke_parent_method/InvokeParentMethodMain$Child."<init>":()V
         7: astore_1                
         8: aload_1                 
         9: invokevirtual #10                 // Method inheritance/invoke_parent_method/InvokeParentMethodMain$Child.getParentId:()I
        12: istore_2                
        13: return                  
      LineNumberTable:
        line 15: 0
        line 16: 8
        line 17: 13
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       14     0  args   [Ljava/lang/String;
           8        6     1  child  Linheritance/invoke_parent_method/InvokeParentMethodMain$Child;
          13        1     2  parentId I
}
SourceFile: "InvokeParentMethodMain.java"
NestMembers:
  inheritance/invoke_parent_method/InvokeParentMethodMain$Child
  inheritance/invoke_parent_method/InvokeParentMethodMain$Parent
InnerClasses:
  static #35= #7 of #14;                      // Child=class inheritance/invoke_parent_method/InvokeParentMethodMain$Child of class inheritance/invoke_parent_method/InvokeParentMethodMain
  static #36= #32 of #14;                     // Parent=class inheritance/invoke_parent_method/InvokeParentMethodMain$Parent of class inheritance/invoke_parent_method/InvokeParentMethodMain
