jclass/snapshots/runtime-inheritance-invoke_parent_setter-InvokeParentSetterMain$Child.class.snap
---
source: jclass/src/lib.rs
expression: display
---
class inheritance.invoke_parent_setter.InvokeParentSetterMain$Child extends inheritance.invoke_parent_setter.InvokeParentSetterMain$Parent
  minor version: 0
  major version: 68
  flags: (0x0020) ACC_SUPER
  this_class: #7                       //inheritance/invoke_parent_setter/InvokeParentSetterMain$Child
  super_class: #2                      //inheritance/invoke_parent_setter/InvokeParentSetterMain$Parent
  interfaces: 0, fields: 0, methods: 1, attributes: 3
Constant pool:
   #1 = Methodref          #2.#3            // inheritance/invoke_parent_setter/InvokeParentSetterMain$Parent."<init>":()V
   #2 = Class              #4               // inheritance/invoke_parent_setter/InvokeParentSetterMain$Parent
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               inheritance/invoke_parent_setter/InvokeParentSetterMain$Parent
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Class              #8               // inheritance/invoke_parent_setter/InvokeParentSetterMain$Child
   #8 = Utf8               inheritance/invoke_parent_setter/InvokeParentSetterMain$Child
   #9 = Utf8               Code
  #10 = Utf8               LineNumberTable
  #11 = Utf8               LocalVariableTable
  #12 = Utf8               this
  #13 = Utf8               Linheritance/invoke_parent_setter/InvokeParentSetterMain$Child;
  #14 = Utf8               SourceFile
  #15 = Utf8               InvokeParentSetterMain.java
  #16 = Utf8               NestHost
  #17 = Class              #18              // inheritance/invoke_parent_setter/InvokeParentSetterMain
  #18 = Utf8               inheritance/invoke_parent_setter/InvokeParentSetterMain
  #19 = Utf8               InnerClasses
  #20 = Utf8               Parent
  #21 = Utf8               Child
{
  inheritance.invoke_parent_setter.InvokeParentSetterMain$Child();
    descriptor: ()V
    flags: (0x0000) 
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method inheritance/invoke_parent_setter/InvokeParentSetterMain$Parent."<init>":()V
         4: return                  
      LineNumberTable:
        line 12: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Linheritance/invoke_parent_setter/InvokeParentSetterMain$Child;
}
SourceFile: "InvokeParentSetterMain.java"
NestHost: class inheritance/invoke_parent_setter/InvokeParentSetterMain
InnerClasses:
  static #20= #2 of #17;                      // Parent=class inheritance/invoke_parent_setter/InvokeParentSetterMain$Parent of class inheritance/invoke_parent_setter/InvokeParentSetterMain
  static #21= #7 of #17;                      // Child=class inheritance/invoke_parent_setter/InvokeParentSetterMain$Child of class inheritance/invoke_parent_setter/InvokeParentSetterMain
